--- a/EmbedFire_STM32H750XB/App.ioc
+++ b/EmbedFire_STM32H750XB/App.ioc
@@ -74,17 +74,57 @@ Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
-Mcu.Pin0=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin2=PB9
-Mcu.Pin3=PB8
-Mcu.Pin4=PA10
-Mcu.Pin5=PA9
-Mcu.Pin6=PH1-OSC_OUT (PH1)
-Mcu.Pin7=PH0-OSC_IN (PH0)
-Mcu.Pin8=VP_SYS_VS_tim7
-Mcu.Pin9=VP_STMicroelectronics.X-CUBE-AZRTOS-H7_VS_RTOSJjThreadX_6.2.0_3.1.0
-Mcu.PinsNb=10
+Mcu.Pin0=PI6
+Mcu.Pin1=PI1
+Mcu.Pin10=PB9
+Mcu.Pin11=PB8
+Mcu.Pin12=PD0
+Mcu.Pin13=PA10
+Mcu.Pin14=PA9
+Mcu.Pin15=PH13
+Mcu.Pin16=PI9
+Mcu.Pin17=PC13
+Mcu.Pin18=PD1
+Mcu.Pin19=PI10
+Mcu.Pin2=PI0
+Mcu.Pin20=PG6
+Mcu.Pin21=PH1-OSC_OUT (PH1)
+Mcu.Pin22=PH0-OSC_IN (PH0)
+Mcu.Pin23=PF6
+Mcu.Pin24=PF7
+Mcu.Pin25=PF8
+Mcu.Pin26=PF9
+Mcu.Pin27=PA0
+Mcu.Pin28=PE10
+Mcu.Pin29=PE9
+Mcu.Pin3=PI7
+Mcu.Pin30=PE11
+Mcu.Pin31=PH10
+Mcu.Pin32=PH11
+Mcu.Pin33=PD15
+Mcu.Pin34=PD14
+Mcu.Pin35=PB2
+Mcu.Pin36=PE12
+Mcu.Pin37=PE15
+Mcu.Pin38=PH9
+Mcu.Pin39=PH12
+Mcu.Pin4=PI2
+Mcu.Pin40=PE8
+Mcu.Pin41=PE13
+Mcu.Pin42=PH8
+Mcu.Pin43=PD10
+Mcu.Pin44=PD9
+Mcu.Pin45=PE7
+Mcu.Pin46=PE14
+Mcu.Pin47=PD8
+Mcu.Pin48=VP_SYS_VS_tim7
+Mcu.Pin49=VP_STMicroelectronics.X-CUBE-AZRTOS-H7_VS_RTOSJjThreadX_6.2.0_3.1.0
+Mcu.Pin5=PH15
+Mcu.Pin6=PH14
+Mcu.Pin7=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin8=PC14-OSC32_IN (OSC32_IN)
+Mcu.Pin9=PI3
+Mcu.PinsNb=50
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -108,26 +148,72 @@ NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=USR_KEY_SW1
+PA0.Locked=true
+PA0.Signal=GPIO_Input
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB2.Locked=true
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC13.GPIOParameters=GPIO_Label
+PC13.GPIO_Label=USR_KEY_SW2
+PC13.Locked=true
+PC13.Signal=GPIO_Input
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PD0.Locked=true
+PD1.Locked=true
+PD10.Locked=true
+PD14.Locked=true
+PD15.Locked=true
+PD8.Locked=true
+PD9.Locked=true
+PE10.Locked=true
+PE11.Locked=true
+PE12.Locked=true
+PE13.Locked=true
+PE14.Locked=true
+PE15.Locked=true
+PE7.Locked=true
+PE8.Locked=true
+PE9.Locked=true
+PF6.Locked=true
+PF7.Locked=true
+PF8.Locked=true
+PF9.Locked=true
+PG6.Locked=true
 PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
+PH10.Locked=true
+PH11.Locked=true
+PH12.Locked=true
+PH13.Locked=true
+PH14.Locked=true
+PH15.Locked=true
+PH8.Locked=true
+PH9.Locked=true
+PI0.Locked=true
+PI1.Locked=true
+PI10.Locked=true
+PI2.Locked=true
+PI3.Locked=true
+PI6.Locked=true
+PI7.Locked=true
+PI9.Locked=true
 PinOutPanel.CurrentBGAView=Top
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -241,7 +327,7 @@ RCC.VCOInput2Freq_Value=5000000
 RCC.VCOInput3Freq_Value=781250
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.ALIGN_TYPE_DEFINED=0
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.AZRTOS_APP_MEM_ALLOCATION_METHOD=0
-STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.IPParameters=AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_MINIMUM_STACK,TX_BASEPRI_SUPPORT,TX_BASEPRI_VALUE,TX_TIMER_TICKS_PER_SECOND,ALIGN_TYPE_DEFINED,TX_ENABLE_STACK_CHECKING,ThreadXCcRTOSJjThreadXJjCore,ThreadXCcRTOSJjThreadXJjPerformanceInfo,TX_THREAD_ENABLE_PERFORMANCE_INFO,TX_TIMER_ENABLE_PERFORMANCE_INFO,TX_SEMAPHORE_ENABLE_PERFORMANCE_INFO,TX_QUEUE_ENABLE_PERFORMANCE_INFO,TX_MUTEX_ENABLE_PERFORMANCE_INFO,TX_EVENT_FLAGS_ENABLE_PERFORMANCE_INFO,TX_BYTE_POOL_ENABLE_PERFORMANCE_INFO,TX_BLOCK_POOL_ENABLE_PERFORMANCE_INFO,TX_APP_GENERATE_INIT_CODE
+STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.IPParameters=AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_MINIMUM_STACK,TX_BASEPRI_SUPPORT,TX_BASEPRI_VALUE,TX_TIMER_TICKS_PER_SECOND,ALIGN_TYPE_DEFINED,TX_ENABLE_STACK_CHECKING,TX_THREAD_ENABLE_PERFORMANCE_INFO,TX_TIMER_ENABLE_PERFORMANCE_INFO,TX_SEMAPHORE_ENABLE_PERFORMANCE_INFO,TX_QUEUE_ENABLE_PERFORMANCE_INFO,TX_MUTEX_ENABLE_PERFORMANCE_INFO,TX_EVENT_FLAGS_ENABLE_PERFORMANCE_INFO,TX_BYTE_POOL_ENABLE_PERFORMANCE_INFO,TX_BLOCK_POOL_ENABLE_PERFORMANCE_INFO,TX_APP_GENERATE_INIT_CODE,ThreadXCcRTOSJjThreadXJjCore,ThreadXCcRTOSJjThreadXJjPerformanceInfo
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.RTOSJjThreadX_Checked=true
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.TX_APP_GENERATE_INIT_CODE=false
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.TX_BASEPRI_SUPPORT=1
