--- a/EmbedFire_STM32H750XB/App.ioc
+++ b/EmbedFire_STM32H750XB/App.ioc
@@ -184,7 +184,6 @@ Mcu.Pin113=VP_RTC_VS_RTC_Activate
 Mcu.Pin114=VP_SYS_VS_tim7
 Mcu.Pin115=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin116=VP_STMicroelectronics.X-CUBE-AZRTOS-H7_VS_RTOSJjThreadX_6.2.0_3.1.0
-Mcu.Pin117=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.0
 Mcu.Pin12=PC11
 Mcu.Pin13=PI2
 Mcu.Pin14=PH15
@@ -281,7 +280,7 @@ Mcu.Pin96=PH8
 Mcu.Pin97=PD10
 Mcu.Pin98=PD9
 Mcu.Pin99=PA3
-Mcu.PinsNb=118
+Mcu.PinsNb=117
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0
 Mcu.ThirdParty1=STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0
 Mcu.ThirdPartyNb=2
@@ -635,7 +634,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_I2C1_Init-I2C1-true-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LTDC_Init-LTDC-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,13-MX_RTC_Init-RTC-false-HAL-true,14-MX_IWDG1_Init-IWDG1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_I2C1_Init-I2C1-true-HAL-true,7-MX_ETH_Init-ETH-false-HAL-true,8-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LTDC_Init-LTDC-false-HAL-true,12-MX_DMA2D_Init-DMA2D-false-HAL-true,13-MX_RTC_Init-RTC-false-HAL-true,14-MX_IWDG1_Init-IWDG1-false-HAL-true,15-MX_CRC_Init-CRC-false-HAL-true,16-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0-false-HAL-false,17-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=80000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -673,8 +672,8 @@ RCC.DIVQ3Freq_Value=450000000
 RCC.DIVR1Freq_Value=480000000
 RCC.DIVR2=12
 RCC.DIVR2Freq_Value=80000000
-RCC.DIVR3=27
-RCC.DIVR3Freq_Value=33333333.333333332
+RCC.DIVR3=30
+RCC.DIVR3Freq_Value=30000000
 RCC.FDCANFreq_Value=240000000
 RCC.FMCFreq_Value=240000000
 RCC.FamilyName=M
@@ -689,7 +688,7 @@ RCC.LPTIM1Freq_Value=120000000
 RCC.LPTIM2Freq_Value=120000000
 RCC.LPTIM345Freq_Value=120000000
 RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=33333333.333333332
+RCC.LTDCFreq_Value=30000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=480000000
 RCC.PLL2FRACN=0
@@ -756,9 +755,8 @@ STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.ThreadXCcRTOSJjThreadXJjCore=true
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0.ThreadXCcRTOSJjThreadXJjPerformanceInfo=true
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0_IsAnAzureRtosMw=true
 STMicroelectronics.X-CUBE-AZRTOS-H7.3.1.0_SwParameter=LevelXCcFileOoSystemJjLevelXJjNANDOoFlashOoSupport\:true;InterfacesCcFileOoSystemJjFileXOoSDOointerface\:true;ThreadXCcRTOSJjThreadXJjPerformanceInfo\:true;FileXCcFileOoSystemJjFileXJjCore\:true;ThreadXCcRTOSJjThreadXJjCore\:true;
-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.ApplicationCcGraphicsJjApplication=TouchGFXOoGenerator
-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.GraphicsJjApplication_Checked=true
-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.IPParameters=tgfx_pixel_format,tgfx_display_interface,tgfx_vsync,tgfx_hardware_accelerator,tgfx_buffering_strategy,ApplicationCcGraphicsJjApplication,tgfx_location
+STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.GraphicsJjApplication_Checked=false
+STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.IPParameters=tgfx_pixel_format,tgfx_display_interface,tgfx_vsync,tgfx_hardware_accelerator,tgfx_buffering_strategy,tgfx_location
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.tgfx_buffering_strategy=Double
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.tgfx_display_interface=disp_ltdc
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.0.tgfx_hardware_accelerator=dma_2d
@@ -790,8 +788,6 @@ VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_STMicroelectronics.X-CUBE-AZRTOS-H7_VS_RTOSJjThreadX_6.2.0_3.1.0.Mode=RTOSJjThreadX
 VP_STMicroelectronics.X-CUBE-AZRTOS-H7_VS_RTOSJjThreadX_6.2.0_3.1.0.Signal=STMicroelectronics.X-CUBE-AZRTOS-H7_VS_RTOSJjThreadX_6.2.0_3.1.0
-VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.0.Mode=GraphicsJjApplication
-VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.0.Signal=STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.0
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
